try to solve truncated
